# charmos

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml  update.yml
docs/: TODO.md  documentation.md  style_guide.md
include/: asm.h  bootstage.h  bootstage_condition.h  cmdline.h  compiler.h  container_of.h  dbg.h  device.h  errno.h  global.h  kassert.h  log.h  nightmare_test.h  profiling.h  registry.h  rw_once.h  stat_series.h  static_call.h  string.h  tests.h
include/acpi/: acpi.h  dmar.h  hpet.h  lapic.h
include/block/: bcache.h  bio.h  block.h  sched.h
include/console/: panic.h  printf.h
include/drivers/: ahci.h  ata.h  mmio.h  nvme.h  pci.h
include/drivers/iommu/: iommu.h  vt_d.h
include/drivers/usb/: hid.h  kb.h  usb.h  xhci.h
include/fs/: detect.h  ext2.h  fat.h  iso9660.h
include/irq/: exception_sync_cb.h  irq.h
include/linker/: symbols.h
include/math/: bit.h  bit_ops.h  ewma.h  fixed.h  hash.h  ilog2.h  kb_mb_gb_tb.h  pow.h
include/mem/: address_range.h  alloc.h  alloc_api_internal.h  alloc_or_die.h  anon_vma.h  avc.h  buddy.h  demand_page.h  dma.h  elcm.h  fixed_size_alloc.h  folio.h  hhdm.h  mm.h  movealloc.h  page.h  page_alloc.h  page_fault.h  page_table.h  page_zeroer.h  rmap.h  simple_alloc.h  slab.h  slab_hint.h  vaddr_alloc.h  vas.h  vma_range.h  vmm.h  vmm_api_internal.h
include/sch/: climb.h  periodic_work.h  preempt.h  sched.h
include/smp/: core.h  percpu.h  perdomain.h  pernode.h
include/structures/: avl.h  bloom.h  hashmap.h  list.h  locked_list.h  minheap.h  mpsc_list.h  pairing_heap.h  radix.h  rbit.h  rbt.h
include/sync/: rwlock.h  semaphore.h  spinlock.h
include/thread/: daemon.h  reaper.h  thread.h  thread_types.h  workqueue.h
include/types/: refcount.h  types.h
kernel/: CMakeLists.txt  assert.c  bootstage.c  cmdline.c  device.c  elf.c  limine.conf  linker-x86_64.ld  log.c  main.c  stat_series.c  string.c  ubsan.c
kernel/acpi/: dmar.c  hpet.c  ioapic.c  lapic.c  srat.c  uacpi_interface.c  uacpi_rw.c
kernel/block/: bcache.c  bio.c  noop_bio.c  nvme_bio.c
kernel/block/sched/: boost.c  coalesce.c  dispatch.c  queue.c  sched.c
kernel/boot/: gdt.c
kernel/console/: panic.c  printf.c
kernel/crypto/: prng.c
kernel/devices/: registry.c
kernel/drivers/: e1000.c  mmio.c  pci.c
kernel/drivers/ahci/: ahci.c  cmd.c  init.c  rw.c
kernel/drivers/ata/: ata.c  atapi.c  ide.c  rw.c
kernel/drivers/iommu/: iommu.c
kernel/drivers/iommu/vt_d/: domain.c  internal.h  iotlb.c  map.c  vt_d.c
kernel/drivers/nvme/: cmd.c  init.c  internal.h  nvme.c  rw.c
kernel/drivers/usb/: internal.h  kb.c  usb.c
kernel/drivers/xhci/: cmd.c  init.c  internal.h  util.c  xhci.c
kernel/fs/: detect.c  iso9660.c  tmpfs.c
kernel/fs/ext2/: ext2.c  io.c  lookup.c  vfs_impl.c
kernel/fs/fat/: create.c  fat.c  io.c
kernel/irq/: fault_isrs.h  irq.c  isrs.asm
kernel/mem/: address_range.c  anon_vma.c  asan.c  avc.c  bitmap.c  dma.c  elcm.c  fixed_size_alloc.c  folio.c  mm.c  movealloc.c  numa.c  page.c  page_alloc.c  page_fault.c  page_zeroer.c  pmm.c  rmap.c  simple_alloc.c  tlb.c  vaddr_alloc.c  vas.c  vma_range.c  vmm.c
kernel/mem/buddy/: core.c  hash.c  init.c  internal.h
kernel/mem/domain/: alloc.c  arena.c  free_queue.c  init.c  internal.h
kernel/mem/slab/: aligned.c  check.c  chunk.c  debug.c  demand.c  domain.c  elcm.c  free_queue.c  gc.c  hint.c  internal.h  order_map.c  percpu.c  resize.c  slab.c  worker.c
kernel/sch/: balance.c  climb.c  domain.c  init.c  internal.h  irql.c  migrate.c  periodic_work.c  queue.c  sched.c  steal.c  wake.c
kernel/sch/rt/: init.c  rt.c  slot.c
kernel/smp/: domain.c  percpu_domain.c  smp.c  topology.c
kernel/structures/: avl.c  bloom.c  minheap.c  pairing_heap.c  radix.c  rbit.c  rbt.c
kernel/syms/: syms_dummy.c
kernel/sync/: condvar.c  mutex.c  rcu.c  rwlock.c  semaphore.c  turnstile.c
kernel/tests/: apc.c  bio.c  bio_sched.c  ext2.c  folio.c  mem.c  minheap.c  mm.c  rbit.c  rcu.c  rmap.c  runner.c  sched.c  sync_nightmare.c  tmpfs.c
kernel/thread/: apc.c  daemon.c  defer.c  dpc.c  idle_thread.c  io_wait.c  reaper.c  thread.c  thread_event.c  tid.c
kernel/thread/workqueue/: misc.c  spawn.c  worker_main.c  workqueue.c
scripts/: Dockerfile  brepl.py  build.sh  clang_toolchain.cmake  gdb_script
tests/: test_invariant_string.c
